Added the rest of files under pkg/codimension/debian/.

--- a/pkg/codimension/debian/rules
+++ b/pkg/codimension/debian/rules
@@ -10,4 +10,8 @@
 #export DH_VERBOSE=1
 
 %:
-	dh $@ 
+	dh $@ --with python2
+
+override_dh_install:
+	dh_install src/* $(DESTDIR)usr/share/codimension/
+	dh_install
