--- a/pkg/codimension/debian/control
+++ b/pkg/codimension/debian/control
@@ -17,7 +17,7 @@ Depends: ${python:Depends}, ${misc:Depends},
  codimension-parser (>=1.3),
  python-qt4 (>=4.7.6), python-qscintilla2 (>=2.4.3),
  python-pygments, python-chardet, pymetrics (>=0.8.1),
- pylint (>=0.23.0), graphviz (>=2.26.3)
+ pylint (>=0.23.0), python-rope (>= 0.9.2), graphviz (>=2.26.3)
 Description: Python IDE with emphasis on graphical representation
  Codimension is an experimental Python IDE based on QT, QScintilla,
  and a custom Python parser. Features:
