Added diff2html, gprof2dot, and pythontidy as third-party dependencies embedded in the codimension package (even on Ubuntu/Debian). (Issue #327)

--- a/pkg/codimension/debian/rules
+++ b/pkg/codimension/debian/rules
@@ -14,4 +14,5 @@
 
 override_dh_install:
 	dh_install src/* $(DESTDIR)usr/share/codimension/
+	dh_install thirdparty $(DESTDIR)usr/share/codimension/
 	dh_install
