Make it buildable

--- a/flowparser/Makefile
+++ b/flowparser/Makefile
@@ -20,28 +20,28 @@
 
 .PHONY: all gen clean cleanall
 
-GENERATED_FILES=pythoncontrolflowLexer.h pythoncontrolflowParser.h \
-		pythoncontrolflowLexer.c pythoncontrolflowParser.c pythoncontrolflow.tokens
+GENERATED_FILES=pycfLexer.h pycfParser.h \
+		pycfLexer.c pycfParser.c pycf.tokens
 
 FLAGS=-ffast-math -fomit-frame-pointer
 INCLUDE=-I../thirdparty/libantlr3c-3.2 -I../thirdparty/libantlr3c-3.2/include
 
-all: $(GENERATED_FILES) cdmpycfparser.c lexerutils.o cf_test.c
+all: $(GENERATED_FILES) cdmcfparser.c lexerutils.o cf_test.c
 	python setup.py build_ext --inplace
 	gcc -O2 ${FLAGS} ${INCLUDE} -c -std=gnu99 cf_test.c
-	gcc ${FLAGS} -o cf_test build/*/pythoncontrolflowLexer.o \
-                               build/*/pythoncontrolflowParser.o \
+	gcc ${FLAGS} -o cf_test build/*/pycfLexer.o \
+                               build/*/pycfParser.o \
                                cf_test.o lexerutils.o \
                                ../thirdparty/libantlr3c-3.2/.libs/libantlr3c.a
 
-gen: pythoncontrolflow.g
-	CLASSPATH=/home/swift/antlr/antlrworks-1.4.jar java org.antlr.Tool pythoncontrolflow.g
+gen: pycf.g
+	CLASSPATH=/home/swift/antlr/antlrworks-1.4.jar java org.antlr.Tool pycf.g
 
 lexerutils.o: lexerutils.c
 	gcc -O2 -I/usr/include/python2.7/ ${FLAGS} ${INCLUDE} -c lexerutils.c
 
 clean:
-	rm -rf *.o core.* _cdmpycfparser.so build/ cf_test core
+	rm -rf *.o core.* _cdmcfparser.so build/ cf_test core
 
 cleanall: clean
 	rm -f $(GENERATED_FILES)
