--- a/pkg/codimension/debian/control
+++ b/pkg/codimension/debian/control
@@ -1,7 +1,7 @@
 Source: codimension
 Section: devel
 Priority: optional
-Maintainer: Dmitry Kazimirov <dk@revl.org>
+Maintainer: Sergey Satskiy <sergey.satskiy@gmail.com>
 Build-Depends: debhelper (>= 7.0.50~)
 Build-Depends-Indep: python-all (>= 2.5), python-support,
  python-qt4 (>= 4.7.6), python-qscintilla2 (>=2.4.3)
@@ -14,7 +14,7 @@ Vcs-Browser: http://code.google.com/p/codimension/source/browse/
 Package: codimension
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends},
- codimension-parser (>=1.5),
+ codimension-parser (>=1.6),
  python-qt4 (>=4.7.6), python-qscintilla2 (>=2.4.3),
  python-pygments, python-chardet, pymetrics (>=0.8.1),
  pylint (>=0.23.0), python-rope (>= 0.9.2), graphviz (>=2.26.3)
