Preparing for release 2.0 instead of broken 1.9

--- a/pkg/codimension/debian/control
+++ b/pkg/codimension/debian/control
@@ -39,3 +39,5 @@ Description: Python IDE with emphasis on graphical representation
    * Simple line counter
    * McCabe cyclomatic complexity for a file or many files
    * New file templates
+   * Pyflakes integration
+   * Python debugger
