Fixes #448. Only adding for deb-based distros for now

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Sergey Satskiy <sergey.satskiy@gmail.com>
 Build-Depends: debhelper (>= 7.0.50~)
 Build-Depends-Indep: python-all (>= 2.5), python-support,
- python-qt4 (>= 4.7.6), python-qscintilla2 (>=2.4.3)
+ python-qt4 (>= 4.7.6), python-qscintilla2 (>=2.4.3), lsb-release
 XS-Python-Version: >=2.5
 Standards-Version: 3.9.3
 Homepage: http://code.google.com/p/codimension/
