--- a/.pylintrc
+++ b/.pylintrc
@@ -9,7 +9,7 @@ init-hook="import sys;sys.path.insert(0,'./src')"
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=CVS,.svn,unittest,src/thirdparty/chardet,chardet,big5freq.py
+ignore=CVS,.svn,unittest,src/thirdparty/chardet,chardet,big5freq.py,everything.py
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
