Remove debug printout; point to the right README.md in the MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,6 @@ include ChangeLog
 include resources/*.*
 include requirements.txt
 include codimension/plugins/README
-include codimension/skins/README
+include codimension/skins/README.md
 recursive-include codimension *.png *.svg *.svgz
 recursive-include codimension/skins *.*
