--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-cdmpyparser
-cdmcfparser
-cdmgcplugin
-pyflakes==2.0.0
-flake8==3.6.0
-radon==2.4.0
-PyQt5~=5.7
+cdmpyparser==3.0.3
+cdmcfparser==2.1.4
+cdmgcplugin==1.0.2
+pyflakes==2.1.1
+flake8==3.7.7
+radon==3.0.1
+PyQt5==5.10.1
 python-magic==0.4.15
 qutepart
-yapsy==1.11.223
-jedi>=0.13.2
-vulture==0.29
-gprof2dot
+yapsy==1.12.0
+jedi==0.13.3
+vulture==1.0
+gprof2dot==2017.9.19
 mistune==0.8.4
-pygments
+pygments==2.3.1
