--- a/.pylintrc
+++ b/.pylintrc
@@ -226,7 +226,7 @@ logging-modules=logging
 [BASIC]
 
 # Good variable names which should always be accepted, separated by a comma
-good-names=f,i,j,k,ex,Run,_
+good-names=f,i,j,k,ex,Run,_,exc,s
 
 # Bad variable names which should always be refused, separated by a comma
 bad-names=foo,bar,baz,toto,tutu,tata
