--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,14 @@ cdmgcplugin==1.0.3
 cdmpylintplugin==1.0.2
 pyflakes==2.1.1
 flake8==3.7.7
-radon==3.0.1
+radon==4.1.0
 PyQt5==5.11.3
 python-magic==0.4.15
-qutepart
+qutepart==3.3.0.post1
 yapsy==1.12.0
 jedi==0.16.0
-vulture==1.0
+vulture==1.3
 gprof2dot==2017.9.19
 mistune==0.8.4
-pygments==2.4.2
+pygments==2.6.1
 qdarkstyle==2.8
