--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 cdmpyparser==3.1.1
 cdmcfparser==2.2.3
-cdmgcplugin==1.0.3
-cdmpylintplugin==1.0.2
+cdmgcplugin==1.0.4
+cdmpylintplugin==1.0.3
+cdmsysinfoplugin==1.0.0
 pyflakes==2.1.1
 flake8==3.7.7
 radon==4.1.0
