Temporary disable picking up a non finished green-black color skin

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,3 +7,4 @@ include codimension/plugins/README
 include codimension/skins/README.md
 recursive-include codimension *.png *.svg *.svgz
 recursive-include codimension/skins *.*
+recursive-exclude codimension/skins/green-black *.*
